fix(www): prevent u-rich-text overflow

--- a/apps/www/app/app.css
+++ b/apps/www/app/app.css
@@ -111,6 +111,7 @@ body {
 
 @layer rich-text {
   .u-rich-text {
+    overflow: hidden;
     & > *:first-child {
       margin-top: 0;
     }
